--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,22 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.3.3'
+	implementation 'org.slf4j:slf4j-api:2.0.16'
+	implementation 'org.slf4j:jul-to-slf4j:2.0.16'
+	implementation 'org.slf4j:log4j-over-slf4j:2.0.16'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	modules {
+        module('org.springframework.boot:spring-boot-starter-logging') {
+            replacedBy 'org.springframework.boot:spring-boot-starter-log4j2'
+        }
+    }
 }
 
 tasks.named('test') {
