--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.3.3'
+	implementation 'org.springframework.retry:spring-retry'
 	implementation 'org.slf4j:slf4j-api:2.0.16'
 	implementation 'org.slf4j:jul-to-slf4j:2.0.16'
 	implementation 'org.slf4j:log4j-over-slf4j:2.0.16'
